<resources>
    <string name="app_name">betaApp</string>
    <string name="wanted_class_hint">רישום לכיתה <font color='#FF0000'>*</font></string>
    <string name="first_name_hint">שם פרטי <font color='#FF0000'>*</font></string>
    <string name="last_name_hint">שם משפחה <font color='#FF0000'>*</font></string>
    <string name="city_hint">יישוב <font color='#FF0000'>*</font></string>
    <string name="street_hint">רחוב <font color='#FF0000'>*</font></string>
    <string name="address_number_hint">מספר הבית <font color='#FF0000'>*</font></string>
    <string name="zip_code_hint">מיקוד <font color='#FF0000'>*</font></string>
    <string name="birth_date_hint">תאריך לידה לועזי <font color='#FF0000'>*</font></string>
    <string name="birth_date_hebrew_hint">תאריך לידה עברי <font color='#FF0000'>*</font></string>
    <string name="current_school_hint">בית ספר נוכחי <font color='#FF0000'>*</font></string>
    <string name="kupat_holim_hint">קופת חולים <font color='#FF0000'>*</font></string>
    <string name="birth_country_hint">ארץ לידה <font color='#FF0000'>*</font></string>
    <string name="maslul_hint">מסלול <font color='#FF0000'>*</font></string>

    <string name="confirm_pictures"><font color='#FF0000'>*</font>הריני לאשר בזאת פרסום של תמונות, סרטונים ומדיה דיגיטלית בהם בני מצולם.\nתמונות, סרטונים, מדיה דיגיטלית אלו יכולים להיות מפורסמים באתר/פייסבוק של אמי"ת באר שבע ובפרסומים נוספים מטעמם. הפרסום לא יכלול את פרטיו האישיים כגון: כתובת מגורים/מספר טלפון/ מידע אודות מצבה הכלכלי/לימודי. </string>
    <string name="confirm_contact"><font color='#FF0000'>*</font>"אנו מאשרים למוסד ליצור קשר עם המחנך/ת / יועץ/ת על מנת לקבל המלצה בעל פה </string>

    <string name="number_of_brothers">מספר אחים ואחיות (לא כולל התלמיד) <font color='#FF0000'>*</font></string>

    <string name="last_year_certificate_A"><font color='#FF0000'>*</font>תעודת מחצית א\' של שנה שעברה</string>
    <string name="last_year_certificate_B"><font color='#FF0000'>*</font>תעודת מחצית ב\' של שנה שעברה</string>
    <string name="two_year_certificate_B"><font color='#FF0000'>*</font>תעודת מחצית ב\' מלפני שנתיים</string>
    <string name="parent_id"><font color='#FF0000'>*</font>צילום ת.ז + ספח של אחד ההורים</string>
    <string name="student_picture"><font color='#FF0000'>*</font>תצלום פני התלמיד (פורמט פספורט) עדכנית</string>
    <string name="more_files">קובץ נוסף / הערכה / משהו אחר</string>

    <string name="marital_status">מצב משפחתי <font color='#FF0000'>*</font></string>
    <string name="id">תעודת זהות באורך 9 ספרות <font color='#FF0000'>*</font></string>
    <string name="parent_profession">מקצוע <font color='#FF0000'>*</font></string>
    <string name="education_years">מספר שנות לימוד <font color='#FF0000'>*</font></string>
    <string name="phone">טלפון נייד <font color='#FF0000'>*</font></string>
    <string name="email">דואר אלקטרוני <font color='#FF0000'>*</font></string>
</resources>