<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormParentsActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <SeekBar
            android:id="@+id/seekbarState"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:clickable="false"
            android:max="6"
            android:progress="2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <TextView
            android:id="@+id/parentType"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:shadowColor="#000000"
            android:shadowRadius="8"
            android:text="פרטי אב"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/parentFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/first_name_hint"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentLastName"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/last_name_hint"
                    android:textColorHint="#757575"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maritalStatus"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/marital_status">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentID"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/id"
                    android:textColorHint="#757575"
                    android:inputType="numberPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentBirthCountry"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/birth_country_hint"
                    android:textColorHint="#757575"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/parentBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/birth_date_hint"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentProfession"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/parent_profession"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentEducationYears"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/education_years"
                    android:inputType="numberPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentWorkPlace"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="שם מקום העבודה"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentPhone"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="numberPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/parentEmail"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:onClick="back"
                android:text="prev" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:onClick="saveData"
                android:tag="move"
                android:text="next" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:onClick="saveData"
                android:tag="stay"
                android:text="save" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>